--- a/Src/FlyPhotos/Views/PhotoDisplayWindow.xaml
+++ b/Src/FlyPhotos/Views/PhotoDisplayWindow.xaml
@@ -143,7 +143,7 @@
                         x:Name="ButtonPrevPage"
                         Width="Auto"
                         Click="ButtonPrevPage_OnClick"
-                        Content="&#xE892;"
+                        Content="&#xF587;"
                         FontFamily="{StaticResource FluentIcons}"
                         FontSize="16"
                         PointerWheelChanged="ButtonBackNextPage_PointerWheelChanged">
@@ -159,7 +159,7 @@
                         Width="Auto"
                         Margin="0,0,10,0"
                         Click="ButtonNextPage_OnClick"
-                        Content="&#xE893;"
+                        Content="&#xF586;"
                         FontFamily="{StaticResource FluentIcons}"
                         FontSize="16"
                         PointerWheelChanged="ButtonBackNextPage_PointerWheelChanged">
