--- a/Src/FlyPhotos/Views/InitWindow.xaml
+++ b/Src/FlyPhotos/Views/InitWindow.xaml
@@ -10,7 +10,8 @@
     </Window.SystemBackdrop>
     <Grid x:Name="MainLayout" Background="Transparent">
         <StackPanel Margin="20,10,20,20" Spacing="15">
-            <TextBlock Style="{StaticResource TitleTextBlockStyle}" Text="Fly Photos - Select Photo" />
+            <!--  Title  -->
+            <TextBlock x:Uid="TitleTextBlock" Style="{StaticResource TitleTextBlockStyle}" />
             <!--  File Interaction Area  -->
             <Border
                 x:Name="DropArea"
@@ -28,31 +29,35 @@
                         Stroke="{ThemeResource SystemControlForegroundBaseMediumBrush}"
                         StrokeDashArray="4 2"
                         StrokeThickness="3" />
-                    <!--  Content: Text with an inline hyperlink  -->
+                    <!--  Content: Text runs are now empty tags, populated by x:Uid  -->
                     <TextBlock
+                        x:Uid="DropAreaTextBlock"
                         HorizontalAlignment="Center"
                         VerticalAlignment="Center"
                         Foreground="{ThemeResource SystemControlPageTextBaseHighBrush}"
                         TextAlignment="Center">
-                        <Run>Drag and drop an image or</Run>
-                        <Hyperlink Click="OpenFileHyperlink_Click">Open file</Hyperlink>
+                        <Run x:Uid="DropAreaRun" />
+                        <Hyperlink Click="OpenFileHyperlink_Click">
+                            <Run x:Uid="OpenFileHyperlink" />
+                        </Hyperlink>
                     </TextBlock>
                 </Grid>
             </Border>
+            <!--  Instructions  -->
             <TextBlock
+                x:Uid="RightClickInstruction"
                 Margin="0,10,0,0"
-                Text="FlyPhotos is intended to be used by right-clicking an image and then selecting Open With &quot;Fly Photos&quot;."
                 TextWrapping="Wrap" />
             <Border
                 Margin="0,5"
                 BorderBrush="Gray"
                 BorderThickness="0,1,0,0" />
-            <TextBlock Text="FlyPhotos can also be set as the default viewer for an extension by right-clicking an image and selecting &quot;Open With&quot; and then &quot;Choose another app&quot; and then select &quot;Fly Photos&quot; and press the &quot;Always&quot; button." TextWrapping="Wrap" />
+            <TextBlock x:Uid="DefaultViewerInstruction1" TextWrapping="Wrap" />
             <Border
                 Margin="0,5"
                 BorderBrush="Gray"
                 BorderThickness="0,1,0,0" />
-            <TextBlock Text="FlyPhotos can also be set as the default viewer for an extension in &quot;Apps &gt; Default Apps&quot; page in &quot;Settings&quot; app of Windows 11." TextWrapping="Wrap" />
+            <TextBlock x:Uid="DefaultViewerInstruction2" TextWrapping="Wrap" />
             <Border
                 Margin="0,5"
                 BorderBrush="Gray"
