Corrected namespaces. Also migrated to filescoped namespaces throughout the project.

--- a/Src/FlyPhotos/UI/Views/Settings.xaml
+++ b/Src/FlyPhotos/UI/Views/Settings.xaml
@@ -1,5 +1,5 @@
 <Window
-    x:Class="FlyPhotos.UI.Screens.Settings"
+    x:Class="FlyPhotos.UI.Views.Settings"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:controls="using:CommunityToolkit.WinUI.Controls"
